# actix-logins-example

./: Cargo.toml
src/: main.rs  types.rs
src/routes/: index.rs  login.rs  logout.rs  mod.rs  userarea.rs
templates/: bad_login.html.tera  index.html.tera  login.html.tera  user_area.html.tera
